# FanTread

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
npm-tests/: bootstrap.test.js
scripts/: bootstrap.js
src/fantread/: __init__.py  __main__.py  cleaner.py  cli.py  config.py  deepseek.py  extractor.py  models.py  render.py  summarizer.py  user_prompt.py
tests/: test_cleaner.py  test_cli.py  test_config.py  test_deepseek.py  test_extractor.py  test_integration.py  test_properties.py  test_render.py  test_summarizer.py  test_user_prompt.py
website/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
website/.openai/: hosting.json
website/app/: globals.css  layout.tsx  page.tsx
website/tests/: rendered-html.test.mjs
website/worker/: index.ts
