[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "fantread"
version = "0.5.0"
description = "A friendly DeepSeek-powered terminal reader that extracts and organizes web content"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "musk" }]
keywords = ["cli", "deepseek", "summarizer", "wechat", "article"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx[http2]>=0.27,<1",
  "keyring>=25,<27",
  "platformdirs>=4,<5",
  "rich>=13.9,<15",
  "trafilatura>=1.12,<3",
  "typer>=0.15,<1",
]

[project.urls]
Homepage = "https://7757.github.io/FanTread/"
Repository = "https://github.com/7757/FanTread.git"
Issues = "https://github.com/7757/FanTread/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
]

[project.scripts]
fantread = "fantread.cli:main"
fan = "fantread.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fantread"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["fantread"]
